# learn_mpv

mpv_c_example/: CMakeLists.txt  main.c
mpv_ipc_example/: CMakeLists.txt  mpv_ipc.c  mpv_ipc.h  pause.c  play.c  quit.c  time.c
